--- a/login.html
+++ b/login.html
@@ -1,9 +1,11 @@
-<div class="d-flex justify-content-center">
-    <div id="login" class="col-3 p-5 rounded-4 border border-success text-center shadow-lg bg-light">
-        <div><h4>Giriş Yap</h4></div>
-        <div><input class="form-control" type="text" name="username" id="username" placeholder="Kullanıcı Adınız"></div>
-        <div><input class="form-control" type="password" name="password" id="password" placeholder="Parolanız"></div>
-        <div><button class="btn btn-outline-success">Giriş Yap</button></div>
+<div class="container">
+    <div class="d-flex row align-items-center justify-content-center">
+        <div id="login" class="col-5 p-5 rounded-4 border border-success text-center shadow-lg bg-light">
+            <div><h4>Giriş Yap</h4></div>
+            <div><input class="form-control" type="text" name="username" id="username" placeholder="Kullanıcı Adınız"></div>
+            <div><input class="form-control" type="password" name="password" id="password" placeholder="Parolanız"></div>
+            <div><button class="btn btn-outline-success">Giriş Yap</button></div>
+        </div>
+    
     </div>
-
 </div>
