--- a/home-page.html
+++ b/home-page.html
@@ -1,13 +1,36 @@
-<div>
-<section class='px-5 mb-2 '>
-      <p class='shadow-lg rounded-4 py-3 px-2 bg-light border border border-light-subtle'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ipsa laboriosam debitis aperiam laudantium voluptatum fugit suscipit at eum repellendus aspernatur ex, cum et minima temporibus pariatur exercitationem ducimus modi. Accusamus, sapiente? Incidunt ut tenetur alias perferendis quos fuga ratione illo laboriosam nam vel at laborum, aliquam rem consequuntur eligendi minus voluptatem! Magni ab obcaecati eveniet hic, voluptatem cupiditate assumenda inventore fugiat consectetur rem ad iusto aspernatur! Corrupti est sapiente debitis, itaque laudantium, ut voluptatum facere vero ipsa magnam nobis ipsum doloremque. Error amet asperiores cupiditate explicabo. Animi dignissimos nulla dicta, sapiente quisquam quidem totam molestiae voluptates asperiores doloribus.</p>
-    </section>
-
-    <section class='px-5 mb-2'>
-      <p class='shadow-lg rounded-4 py-3 px-2 bg-light border border border-light-subtle'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ipsa laboriosam debitis aperiam laudantium voluptatum fugit suscipit at eum repellendus aspernatur ex, cum et minima temporibus pariatur exercitationem ducimus modi. Accusamus, sapiente? Incidunt ut tenetur alias perferendis quos fuga ratione illo laboriosam nam vel at laborum, aliquam rem consequuntur eligendi minus voluptatem! Magni ab obcaecati eveniet hic, voluptatem cupiditate assumenda inventore fugiat consectetur rem ad iusto aspernatur! Corrupti est sapiente debitis, itaque laudantium, ut voluptatum facere vero ipsa magnam nobis ipsum doloremque. Error amet asperiores cupiditate explicabo. Animi dignissimos nulla dicta, sapiente quisquam quidem totam molestiae voluptates asperiores doloribus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse perferendis enim eligendi, harum fuga quae aliquid voluptatum facilis minima pariatur amet doloribus aliquam laudantium ut cupiditate placeat praesentium sint? Debitis sapiente magnam incidunt, adipisci quibusdam tenetur autem dolore error, voluptas dolores ea! Fugit, repellat iure quidem quae nulla doloribus ipsam?</p>
-    </section>
-    <section class='px-5 mb-2'>
-      <p class='shadow-lg rounded-4 py-3 px-2 bg-light border border border-light-subtle'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ullam ipsa laboriosam debitis aperiam laudantium voluptatum fugit suscipit at eum repellendus aspernatur ex, cum et minima temporibus pariatur exercitationem ducimus modi. Accusamus, sapiente? Incidunt ut tenetur alias perferendis quos fuga ratione illo laboriosam nam vel at laborum, aliquam rem consequuntur eligendi minus voluptatem! Magni ab obcaecati eveniet hic, voluptatem cupiditate assumenda inventore fugiat consectetur rem ad iusto aspernatur! Corrupti est sapiente debitis, itaque laudantium, ut voluptatum facere vero ipsa magnam nobis ipsum doloremque. Error amet asperiores cupiditate explicabo. Animi dignissimos nulla dicta, sapiente quisquam quidem totam molestiae voluptates asperiores doloribus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse perferendis enim eligendi, harum fuga quae aliquid voluptatum facilis minima pariatur amet doloribus aliquam laudantium ut cupiditate placeat praesentium sint? Debitis sapiente magnam incidunt, adipisci quibusdam tenetur autem dolore error, voluptas dolores ea! Fugit, repellat iure quidem quae nulla doloribus ipsam?</p>
-    </section>
+<div class="container py-5">
+  <section class='row d-flex'>
+    <p class='shadow-lg rounded-4 text-justify py-3 px-2 bg-light border border-light-subtle'>Lorem ipsum dolor sit amet
+      consectetur adipisicing elit. Odit ullam ipsa laboriosam debitis aperiam laudantium voluptatum fugit suscipit at
+      eum repellendus aspernatur ex, cum et minima temporibus pariatur exercitationem ducimus modi. Accusamus, sapiente?
+      Incidunt ut tenetur alias perferendis quos fuga ratione illo laboriosam nam vel at laborum, aliquam rem
+      consequuntur eligendi minus voluptatem! Magni ab obcaecati eveniet hic, voluptatem cupiditate assumenda inventore
+      fugiat consectetur rem ad iusto aspernatur! Corrupti est sapiente debitis, itaque laudantium, ut voluptatum facere
+      vero ipsa magnam nobis ipsum doloremque. Error amet asperiores cupiditate explicabo. Animi dignissimos nulla
+      dicta, sapiente quisquam quidem totam molestiae voluptates asperiores doloribus.</p>
+    <p class='shadow-lg rounded-4 text-justify py-3 px-2 bg-light border border-light-subtle'>Lorem ipsum dolor sit amet
+      consectetur adipisicing elit. Odit ullam ipsa laboriosam debitis aperiam laudantium voluptatum fugit suscipit at
+      eum repellendus aspernatur ex, cum et minima temporibus pariatur exercitationem ducimus modi. Accusamus, sapiente?
+      Incidunt ut tenetur alias perferendis quos fuga ratione illo laboriosam nam vel at laborum, aliquam rem
+      consequuntur eligendi minus voluptatem! Magni ab obcaecati eveniet hic, voluptatem cupiditate assumenda inventore
+      fugiat consectetur rem ad iusto aspernatur! Corrupti est sapiente debitis, itaque laudantium, ut voluptatum facere
+      vero ipsa magnam nobis ipsum doloremque. Error amet asperiores cupiditate explicabo. Animi dignissimos nulla
+      dicta, sapiente quisquam quidem totam molestiae voluptates asperiores doloribus. Lorem ipsum dolor sit amet
+      consectetur adipisicing elit. Esse perferendis enim eligendi, harum fuga quae aliquid voluptatum facilis minima
+      pariatur amet doloribus aliquam laudantium ut cupiditate placeat praesentium sint? Debitis sapiente magnam
+      incidunt, adipisci quibusdam tenetur autem dolore error, voluptas dolores ea! Fugit, repellat iure quidem quae
+      nulla doloribus ipsam?</p>
+    <p class='shadow-lg rounded-4 text-justify py-3 px-2 bg-light border border-light-subtle'>Lorem ipsum dolor sit amet
+      consectetur adipisicing elit. Odit ullam ipsa laboriosam debitis aperiam laudantium voluptatum fugit suscipit at
+      eum repellendus aspernatur ex, cum et minima temporibus pariatur exercitationem ducimus modi. Accusamus, sapiente?
+      Incidunt ut tenetur alias perferendis quos fuga ratione illo laboriosam nam vel at laborum, aliquam rem
+      consequuntur eligendi minus voluptatem! Magni ab obcaecati eveniet hic, voluptatem cupiditate assumenda inventore
+      fugiat consectetur rem ad iusto aspernatur! Corrupti est sapiente debitis, itaque laudantium, ut voluptatum facere
+      vero ipsa magnam nobis ipsum doloremque. Error amet asperiores cupiditate explicabo. Animi dignissimos nulla
+      dicta, sapiente quisquam quidem totam molestiae voluptates asperiores doloribus. Lorem ipsum dolor sit amet
+      consectetur adipisicing elit. Esse perferendis enim eligendi, harum fuga quae aliquid voluptatum facilis minima
+      pariatur amet doloribus aliquam laudantium ut cupiditate placeat praesentium sint? Debitis sapiente magnam
+      incidunt, adipisci quibusdam tenetur autem dolore error, voluptas dolores ea! Fugit, repellat iure quidem quae
+      nulla doloribus ipsam?</p>
+  </section>
 </div>
-
