--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="d-flex row align-items-center justify-content-center">
+    <div class="d-flex align-items-center justify-content-center">
         <div id="login" class="col-5 p-5 rounded-4 border border-success text-center shadow-lg bg-light">
             <div><h4>Giriş Yap</h4></div>
             <div><input class="form-control" type="text" name="username" id="username" placeholder="Kullanıcı Adınız"></div>
