--- a/singup.html
+++ b/singup.html
@@ -1,11 +1,11 @@
 <div class="container">
     <div class="d-flex justify-content-center">
-        <div id="login" class="col-xl-5 p-5 rounded-4 border border-success text-center">
-            <div><h4>Giriş Yap</h4></div>
+        <div id="singup" class="col-5 p-5 rounded-4 border border-success text-center shadow-lg bg-light">
+            <div><h4>Kayıt Ol</h4></div>
             <div><input class="form-control" type="text" name="username" id="username" placeholder="Kullanıcı Adınız"></div>
             <div><input class="form-control" type="password" name="password" id="password" placeholder="Parolanız"></div>
             <div><input class="form-control" type="password" name="password" id="password" placeholder="Parolanızı Tekrar Giriniz"></div>
-            <div><button class="btn btn-outline-success">Giriş Yap</button></div>
+            <div><button class="btn btn-outline-success">Kayıt Ol</button></div>
         </div>
     
     </div>
