--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
             <div><h4>Giriş Yap</h4></div>
             <div><input class="form-control" type="text" name="username" id="username" placeholder="Kullanıcı Adınız"></div>
             <div><input class="form-control" type="password" name="password" id="password" placeholder="Parolanız"></div>
-            <div><button class="btn btn-outline-success">Giriş Yap</button></div>
+            <div><button class="btn buttn btn-outline-success">Giriş Yap</button></div>
         </div>
     
     </div>
