--- a/login.html
+++ b/login.html
@@ -1,11 +1,11 @@
 <div class="container">
-    <div class="d-flex align-items-center justify-content-center">
+    <div class="d-flex align-items-center justify-content-center" style="height: 80vh;">
         <div id="login" class="col-5 p-5 rounded-4 border border-success text-center shadow-lg bg-light">
             <div><h4>Giriş Yap</h4></div>
             <div><input class="form-control" type="text" name="username" id="username" placeholder="Kullanıcı Adınız"></div>
             <div><input class="form-control" type="password" name="password" id="password" placeholder="Parolanız"></div>
-            <div><button class="btn buttn btn-outline-success">Giriş Yap</button></div>
+            <div><button id="login" class="btn buttn btn-outline-success">Giriş Yap</button></div>
+            <small>Hesabınız yok mu ? <a class="link-offset-2-hover link-success" href="index.php?page=singup">Kayıt olun.</a></small>
         </div>
-    
     </div>
 </div>
