--- a/singup.html
+++ b/singup.html
@@ -1,12 +1,12 @@
 <div class="container">
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
         <div id="singup" class="col-5 p-5 rounded-4 border border-success text-center shadow-lg bg-light">
             <div><h4>Kayıt Ol</h4></div>
             <div><input class="form-control" type="text" name="username" id="username" placeholder="Kullanıcı Adınız"></div>
             <div><input class="form-control" type="password" name="password" id="password" placeholder="Parolanız"></div>
             <div><input class="form-control" type="password" name="password" id="password" placeholder="Parolanızı Tekrar Giriniz"></div>
             <div><button class="btn buttn btn-outline-success">Kayıt Ol</button></div>
+            <small>Hesabınız var mı? <a class="link-offset-2-hover link-success" href="index.php?page=login">Giriş Yapın.</a></small>
         </div>
-    
     </div>
 </div>
