--- a/login.html
+++ b/login.html
@@ -4,8 +4,8 @@
             <div><h4>Giriş Yap</h4></div>
             <div><input class="form-control" type="text" name="username" id="username" placeholder="Kullanıcı Adınız"></div>
             <div><input class="form-control" type="password" name="password" id="password" placeholder="Parolanız"></div>
-            <div><button id="login" class="btn buttn btn-outline-success">Giriş Yap</button></div>
-            <small>Hesabınız yok mu ? <a class="link-offset-2-hover link-success" href="index.php?page=singup">Kayıt olun.</a></small>
+            <div><button id="loginBtn" class="btn buttn btn-outline-success">Giriş Yap</button></div>
+            <small>Hesabınız yok mu? <a class="link-offset-2-hover link-success" href="index.php?page=singup">Kayıt olun.</a></small>
         </div>
     </div>
 </div>
