--- a/singup.html
+++ b/singup.html
@@ -5,7 +5,7 @@
             <div><input class="form-control" type="text" name="username" id="username" placeholder="Kullanıcı Adınız"></div>
             <div><input class="form-control" type="password" name="password" id="password" placeholder="Parolanız"></div>
             <div><input class="form-control" type="password" name="password" id="password" placeholder="Parolanızı Tekrar Giriniz"></div>
-            <div><button class="btn buttn btn-outline-success">Kayıt Ol</button></div>
+            <div><button id="singupBtn" class="btn buttn btn-outline-success">Kayıt Ol</button></div>
             <small>Hesabınız var mı? <a class="link-offset-2-hover link-success" href="index.php?page=login">Giriş Yapın.</a></small>
         </div>
     </div>
